fixed coding standards, updated api spec
